dev/app-01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-01
  namespace: dev1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-01
  template:
    metadata:
      labels:
        app: app-01
    spec:
      containers:
      - name: app-01-container
        image: nginx:latest
        ports:
        - containerPort: 80
