dev/app-01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-01-service
  namespace: dev1
spec:
  type: NodePort 
  selector:
    app: app-01
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
